Updated code to use local assets

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<script type="text/javascript" async="" src="http://dc8na2hxrj29i.cloudfront.net/code/keen-2.1.0-min.js"></script>
 	<script async="" src="//www.google-analytics.com/analytics.js"></script>
 	<style type="text/css"></style> 
-	<link rel="stylesheet" media="screen" href="//assets.strikingly.com/assets/_reset-f7450719ba01c2dbaba7a9abf2fa11a4.css">
+	<link rel="stylesheet" media="screen" href="/css/reset.css">
 	<link rel="stylesheet" media="screen" href="//fonts.googleapis.com/css?family=Raleway:300,700|Roboto+Condensed:300,700|Lato:300,400,700,300italic,400italic,700italic|Abril+Fatface&amp;subset=latin,latin-ext">
-	<link rel="stylesheet" media="screen" href="//assets.strikingly.com/assets/themes/app/main_v4-343df4adf537a281a7a824eaffe79901.css"> 
+	<link rel="stylesheet" media="screen" href="/css/main.css"> 
 	<!--[if lte IE 9]><link rel="stylesheet" media="screen" href="//assets.strikingly.com/assets/themes/app/main_v4_split2-cf8535266ff25e55fd381a763febfebd.css"/><![endif]--> 
 	<link href="http://res.cloudinary.com/hrscywv4p/image/upload/c_limit,h_64,w_64/v1/793477/favicon_u8rpmj.ico" rel="shortcut icon" type="image/x-icon">
 	<link href="http://res.cloudinary.com/hrscywv4p/image/upload/c_limit,h_60,q_90,w_60/v1/793477/bk_mark_reg_kktg94.png" rel="apple-touch-icon" sizes="60x60">
@@ -20,9 +20,9 @@
 	<link href="http://res.cloudinary.com/hrscywv4p/image/upload/c_limit,h_120,q_90,w_120/v1/793477/bk_mark_reg_kktg94.png" rel="apple-touch-icon" sizes="120x120">
 	<link href="http://res.cloudinary.com/hrscywv4p/image/upload/c_limit,h_152,q_90,w_152/v1/793477/bk_mark_reg_kktg94.png" rel="apple-touch-icon" sizes="152x152">
 	<style type="text/css"></style>
-	<script type="text/javascript" charset="utf-8" async="" src="//assets.strikingly.com/assets/v4/20.9b130413791d4ee189c1-show-bundle.js"></script>
-	<script type="text/javascript" charset="utf-8" async="" src="//assets.strikingly.com/assets/v4/9.9b130413791d4ee189c1-show-bundle.js"></script>
-	<script type="text/javascript" charset="utf-8" async="" src="//assets.strikingly.com/assets/v4/28.9b130413791d4ee189c1-show-bundle.js"></script>
+	<script type="text/javascript" charset="utf-8" async="" src="/js/bundle1.js"></script>
+	<script type="text/javascript" charset="utf-8" async="" src="/js/bundle2.js"></script>
+	<script type="text/javascript" charset="utf-8" async="" src="/js/bundle3.js"></script>
 	<style type="text/css">.fancybox-margin{margin-right:0px;}</style>
 </head> 
 
