Added link to TrustYou

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 												<h4 class="s-component-content s-font-heading" >
 													<p>&nbsp;</p>
 													<p style="text-align:left">
-														Thank you for your trust and support for the past 8 years. Our analytics tool is now fully transitioned to TrustYou.
+														Thank you for your trust and support for the past 8 years. Our analytics tool is now fully transitioned to <u><a href="https://login.trustyou.com/">TrustYou</a></u>.
 													</p>
 													<p style="text-align:left">&nbsp;</p>
 													<p style="text-align:left">
